--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,8 @@
 
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.CAMERA"/>
+	<uses-feature android:name="android.hardware.camera" />
 
     <application
         android:allowBackup="true"
@@ -26,6 +28,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="com.dm.zbar.android.scanner.ZBarScannerActivity"
+	        android:screenOrientation="landscape"
+	         />
+        
         <activity
             android:name="tipsystem.tips.LoginActivity"
             android:icon="@drawable/back_btn"
