--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:targetSdkVersion="17" />
 
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 	<uses-feature android:name="android.hardware.camera" />
 
     <application
@@ -19,7 +20,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo" >
         <activity
-            android:name="tipsystem.tips.MainActivity"
+            android:name="tipsystem.tips.TIPSSplashActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo.NoActionBar" >
             <intent-filter>
@@ -35,11 +36,11 @@
         
         <activity
             android:name="tipsystem.tips.LoginActivity"
-            android:icon="@drawable/back_btn"
             android:parentActivityName="tipsystem.tips.MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="tipsystem.tips.MainActivity" />
+        </activity>
+        <activity
+            android:name="tipsystem.tips.MainActivity"
+            android:parentActivityName="tipsystem.tips.MainActivity" >
         </activity>
         <activity
             android:name="tipsystem.tips.ConfigActivity"
