--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-16
-android.library.reference.1=../ZBarScanner-master/ZBarScannerLibrary
+android.library.reference.1=external/ZBarScanner-master/ZBarScannerLibrary
