--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -63,6 +63,7 @@
                 android:value="tipsystem.tips.MainActivity" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name="tipsystem.tips.InputQuestionActivity"
             android:label="@string/title_activity_input_question"
             android:parentActivityName="tipsystem.tips.MainMenuActivity" >
@@ -86,6 +87,7 @@
         <activity
             android:name="tipsystem.tips.ManageCustomerActivity"
             android:label="거래처 관리"
+            android:windowSoftInputMode="adjustPan"
             android:parentActivityName="tipsystem.tips.ManageCodeActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
