--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="16"
-        android:targetSdkVersion="17" />
+        android:minSdkVersion="10" android:targetSdkVersion="17"/>
 
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -17,13 +16,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo" >
+        android:label="@string/app_name" android:theme="@android:style/Theme.Black.NoTitleBar">
         <activity
             android:screenOrientation="portrait"
             android:name="tipsystem.tips.TIPSSplashActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.NoActionBar" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -73,8 +70,7 @@
         </activity>
         <activity
             android:name="tipsystem.tips.SelectShopActivity"
-            android:parentActivityName="tipsystem.tips.LoginActivity"
-            android:theme="@android:style/Theme.Holo.Light" >
+            android:parentActivityName="tipsystem.tips.LoginActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.ConfigActivity" />
@@ -82,39 +78,39 @@
         <activity
             android:name="tipsystem.tips.ManageCodeActivity"
             android:icon="@drawable/home_btn"
-            android:parentActivityName="tipsystem.tips.MainMenuActivity" >
+            android:parentActivityName="tipsystem.tips.MainMenuActivity" android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="tipsystem.tips.ManageCustomerActivity"
             android:label="거래처 관리"
             android:windowSoftInputMode="adjustPan"
-            android:parentActivityName="tipsystem.tips.ManageCodeActivity" >
+            android:parentActivityName="tipsystem.tips.ManageCodeActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.ManageCodeActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.ManageCustomerListActivity"
-            android:label="거래처 선택">
+            android:label="거래처 선택" android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="tipsystem.tips.ManageProductActivity"
             android:label="상품등록"
-            android:parentActivityName="tipsystem.tips.ManageCodeActivity" >
+            android:parentActivityName="tipsystem.tips.ManageCodeActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.ManageCodeActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.ComparePriceActivity"
-            android:parentActivityName="tipsystem.tips.ManageCodeActivity" >
+            android:parentActivityName="tipsystem.tips.ManageCodeActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.ManageCodeActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.ComparePriceDetailActivity"
-            android:parentActivityName="tipsystem.tips.ComparePriceActivity" >
+            android:parentActivityName="tipsystem.tips.ComparePriceActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.ComparePriceActivity" />
@@ -122,49 +118,49 @@
         <activity
             android:name="tipsystem.tips.ManagePurchaseActivity"
             android:icon="@drawable/home_btn"
-            android:parentActivityName="tipsystem.tips.MainMenuActivity" >
+            android:parentActivityName="tipsystem.tips.MainMenuActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.MainMenuActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.PurchaseRegistActivity"
-            android:parentActivityName="tipsystem.tips.ManagePurchaseActivity" >
+            android:parentActivityName="tipsystem.tips.ManagePurchaseActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.ManagePurchaseActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.PurchaseDetailActivity"
-            android:parentActivityName="tipsystem.tips.PurchaseRegistActivity" >
+            android:parentActivityName="tipsystem.tips.PurchaseRegistActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.PurchaseRegistActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.PurchasePaymentStatusActivity"
-            android:parentActivityName="tipsystem.tips.ManagePurchaseActivity" >
+            android:parentActivityName="tipsystem.tips.ManagePurchaseActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.ManagePurchaseActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.PurchaseListDetailViewActivity"
-            android:parentActivityName="tipsystem.tips.PurchasePaymentStatusActivity" >
+            android:parentActivityName="tipsystem.tips.PurchasePaymentStatusActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.PurchasePaymentStatusActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.PaymentDetailViewActivity"
-            android:parentActivityName="tipsystem.tips.PurchasePaymentStatusActivity" >
+            android:parentActivityName="tipsystem.tips.PurchasePaymentStatusActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.PurchasePaymentStatusActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.CustomerPurchasePaymentDetailActivity"
-            android:parentActivityName="tipsystem.tips.PurchasePaymentStatusActivity">
+            android:parentActivityName="tipsystem.tips.PurchasePaymentStatusActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.PurchasePaymentStatusActivity" />
@@ -179,7 +175,7 @@
         </activity>
         <activity
             android:name="tipsystem.tips.CustomerProductDetailViewActivity"
-            android:parentActivityName="tipsystem.tips.ManageSalesActivity" >
+            android:parentActivityName="tipsystem.tips.ManageSalesActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.ManageSalesActivity" />
@@ -195,42 +191,42 @@
         </activity>
         <activity
             android:name="tipsystem.tips.ManageEventListActivity"
-            android:parentActivityName="tipsystem.tips.MainMenuActivity" >
+            android:parentActivityName="tipsystem.tips.MainMenuActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.MainMenuActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.EventDetailViewActivity"
-            android:parentActivityName="tipsystem.tips.ManageEventActivity" >
+            android:parentActivityName="tipsystem.tips.ManageEventActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.ManageEventActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.SalesNewsActivity"
-            android:parentActivityName="tipsystem.tips.MainMenuActivity" >
+            android:parentActivityName="tipsystem.tips.MainMenuActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.MainMenuActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.CustomerProductDetailInNewsActivity"
-            android:parentActivityName="tipsystem.tips.SalesNewsActivity" >
+            android:parentActivityName="tipsystem.tips.SalesNewsActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.SalesNewsActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.ManageStockActivity"
-            android:parentActivityName="tipsystem.tips.MainMenuActivity" >
+            android:parentActivityName="tipsystem.tips.MainMenuActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.MainMenuActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.ChargeCustomerDetailActivity"
-            android:parentActivityName="tipsystem.tips.ManageSalesActivity" >
+            android:parentActivityName="tipsystem.tips.ManageSalesActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.ManageSalesActivity" />
@@ -238,7 +234,7 @@
         
          <activity
             android:name="tipsystem.tips.ManageProductListActivity"
-            android:parentActivityName="tipsystem.tips.ManageSalesActivity" >
+            android:parentActivityName="tipsystem.tips.ManageSalesActivity" android:screenOrientation="portrait">
         </activity>
     </application>
 
