--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,8 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10" android:targetSdkVersion="17"/>
-
+        android:minSdkVersion="11"
+        android:targetSdkVersion="17" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.CAMERA"/>
@@ -16,7 +16,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" android:theme="@android:style/Theme.Black.NoTitleBar">
+        android:label="@string/app_name" android:theme="@android:style/Theme.Holo">
         <activity
             android:screenOrientation="portrait"
             android:name="tipsystem.tips.TIPSSplashActivity"
@@ -67,13 +67,6 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="tipsystem.tips.MainMenuActivity" />
-        </activity>
-        <activity
-            android:name="tipsystem.tips.SelectShopActivity"
-            android:parentActivityName="tipsystem.tips.LoginActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="tipsystem.tips.ConfigActivity" />
         </activity>
         <activity
             android:name="tipsystem.tips.ManageCodeActivity"
