--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -88,6 +88,7 @@
         <activity
             android:name="tipsystem.tips.ManageProductActivity"
             android:label="상품등록"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"
             android:parentActivityName="tipsystem.tips.ManageCodeActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
