--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,8 +38,7 @@
         </activity>
         <activity
             android:screenOrientation="portrait"
-            android:name="tipsystem.tips.MainActivity"
-            android:parentActivityName="tipsystem.tips.MainActivity" >
+            android:name="tipsystem.tips.MainActivity" >
         </activity>
         <activity
             android:screenOrientation="portrait"
